--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^3.10.0",
     "@liveblocks/client": "^2.14.0",
     "@liveblocks/react": "^2.14.0",
@@ -62,6 +63,7 @@
     "@tiptap/starter-kit": "^2.10.3",
     "@uploadcare/react-uploader": "^1.4.2",
     "@uploadcare/upload-client": "^6.15.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -92,6 +94,7 @@
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.49.1",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
